[tool.poetry]
name = "matrix-loader"
version = "0.1.0"
description = "Matrix dependency checker and data analyzer"
authors = ["Your Name <you@example.com>"]
package-mode = false  # <--- THIS IS THE SECRET KEY

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.1.0"
numpy = "<2.0.0"
matplotlib = "3.7.2"
requests = "2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
